Fixed full screen gallery item on mobile

--- a/src/components/FullScreenGallery.module.css
+++ b/src/components/FullScreenGallery.module.css
@@ -53,15 +53,17 @@
 
 .carouselItem {
   position: relative;
-  width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 48px;
-  max-height: 100vh;
+  width: 100vw;
+  height: 100vh;
 }
 
 .image {
   position: relative;
   z-index: 1;
+  /* flex-grow: 0;
+  flex-shrink: 0; */
 }
